@@ -4,7 +4,8 @@ Changelog
 1.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Prevent some more lower-case email address comparison problems.
+  [maurits]
 
 
 1.5 (2011-06-22)
